--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -80,7 +80,7 @@
 
 @media screen and (max-width: 768px) {
     .search-container{
-        height: 35vh;
+        height: 25vh;
     }
     .search-content {
         flex-direction: column;
@@ -117,7 +117,6 @@
     }
 
     .search-instruction {
-        width: 100%;
-        font-size: 1rem;
+        display: none;
     }
 }
