--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -16,7 +16,7 @@
 
 
 .pokemon-name{
-     /* background-color: aqua; */
+     background-color: aqua;
     height: 2rem;
     width: 100%;
      display: flex;
@@ -38,7 +38,8 @@
 }
 
 .pokemon-image:hover{
-     transform: rotate(360deg);
+     transform: rotate(-15deg) scale(1.05);
+   
     
 }
 .pokemon-image img{
