--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -1,13 +1,15 @@
-.pokemon{
-    flex-basis: 30%;
-    height: 53vh;
+/* .pokemon{
+    flex-basis: 20%;
+    height: 50vh;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
+    justify-content:center;
+  
     align-items:center;
     border-radius: 1rem;
     transition: box-shadow 0.3s ease-in-out;
+    background-color: bisque;
 }
 .pokemon:hover{
     box-shadow: 0 0 30px;
@@ -18,7 +20,8 @@
 .pokemon-name{
      background-color: aqua;
     height: 2rem;
-    width: 100%;
+    width: 70%;
+    
      display: flex;
      justify-content: center;
     font-size: 1.8rem;
@@ -33,7 +36,7 @@
     transition: transform 0.9s ease;
     overflow: hidden;
     display: flex;
-    /* background-color: blueviolet; */
+    background-color: blueviolet;
     
 }
 
@@ -55,4 +58,62 @@
         width: 65%;
     }
     
+} */
+
+
+.pokemon{
+    height: 50vh;
+    /* background-color: red; */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
+    transition: box-shadow 0.3s ease-in-out;
+    background-color: bisque;
+    overflow: hidden;
 }
+.pokemon-name{
+    margin-left: 5vw;
+    height: 6vh;
+    width: 15vw;
+    /* background-color: aquamarine; */
+    font-size: 1.8rem;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 0.3rem;
+    
+}
+
+.pokemon-image{
+    margin-top: 5vh;
+    height: 25vh;
+    width: 20vw;
+    /* background-color: blue; */
+    
+}
+
+.pokemon-image img{
+    height: 90%;
+    width: 100%;
+   
+}
+
+
+.pokemon-image:hover{
+    transform: rotate(-15deg) scale(1.05);
+  
+   
+}
+.pokemon-image img{
+   width: 100%;   
+}
+
+
+@media screen and (max-width:768px) {
+   .pokemon{
+       flex-basis: 40%;
+   }
+   .pokemon-image{
+       width: 65%;
+   }
+   
+}
+
