--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -28,8 +28,8 @@
 
 .controls{
     margin: 0 auto;
-    margin-bottom: 0.5rem;
-    margin-top: 0.5rem;
+    margin-bottom: 3rem;
+    margin-top: 1.5rem;
    
 }
 
@@ -37,16 +37,18 @@
     padding: 0.5rem 1rem 0.5rem 1rem; /* top right bottom left */
     margin: 0 0.7rem; /* top/bottom 0, left/right 0.7rem */
     border-radius: 10px;
-    width: 6rem;
+    width: 10rem;
+    height: 10vh;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     font-size: 16px;
     font-weight: bold;
     transition: background-color 0.3s ease;
     cursor: pointer;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 4px ;
     font-family: 'Arial',sans-serif;
     letter-spacing: 1px;
+    background-color:pink;
 }
 
 .controls button:hover {
