--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -64,10 +64,11 @@
 .pokemon{
     height: 50vh;
     /* background-color: red; */
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: 1rem;
     transition: box-shadow 0.3s ease-in-out;
-    background-color: bisque;
+    
+     
     overflow: hidden;
 }
 .pokemon-name{
@@ -109,6 +110,7 @@
 
 @media screen and (max-width:768px) {
    .pokemon{
+    height: 45vh;
        flex-basis: 40%;
    }
    .pokemon-image{
