--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -3,12 +3,16 @@
     display: flex;
     flex-direction: column;
     
+    
     /* background-color: aqua; */
 }
 .pokemon-list-heading{
     padding-left: 40%;
     font-size: 2rem;
     font-weight: bold;
+    color: yellowgreen;
+  
+
     /* background-color: red; */
 }
 .pokemon-wrapper{
@@ -55,4 +59,16 @@
     background-color: #4CAF50; /* Change background color on hover */
     color: #ffffff; /* Change text color on hover */
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5); /* Adjust shadow on hover */
+  }
+
+  @media screen and (max-width:768px) {
+    .controls{
+        display: flex;
+        width: 80vw;
+    }
+    .pokemon-list-heading{
+        padding-left: 20%;
+    }
+ 
+    
   }
